Update style.css, attempt overflow fix.
Attempt fix for overflow being cut off.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #card-container {
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: auto;
+    /*overflow-x: auto;*/
     padding: 10px;
     gap: 20px;
     background-color: lightgrey;
